--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/the-mikedavis/swampscape#readme",
   "dependencies": {
     "express": "^4.16.3",
+    "googleapis": "^27.0.0",
     "nunjucks": "^3.1.2"
   }
 }
