--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "express": "^4.16.3",
     "googleapis": "^27.0.0",
-    "nunjucks": "^3.1.2"
+    "nunjucks": "^3.1.2",
+    "showdown": "^1.8.6"
   }
 }
