--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.16.3",
     "googleapis": "^27.0.0",
     "nunjucks": "^3.1.2",
+    "serve-favicon": "^2.5.0",
     "showdown": "^1.8.6"
   }
 }
